fix instruction alignment

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
   .game-title {
     text-align: center;
     font-size: 2rem;
-    margin-top: 50px;
+    margin-top: 40px;
     color: rgb(91, 55, 4)
   }
 
@@ -66,7 +66,7 @@
     text-align: center;
     font-size: 0.5rem;
     color: rgb(91, 55, 4);
-    margin-top: 1rem;
+    margin-top: 0.5rem;
     max-width: 600px;
     margin-left: auto;
     margin-right: auto;
